helium (1.7~pre20090428-5) UNRELEASED; urgency=low

  * Restore changes from NMU (Luk Claes):
    - Add libncurses-dev build dependency.
  * Merge from Ubuntu (Michael Bienia):
    - debian/patches/20_fix-as-needed-linking: Fix linking with --as-needed.
  * Update watch file.

 -- Colin Watson <cjwatson@debian.org>  Wed, 29 May 2013 00:12:26 +0100

helium (1.7~pre20090428-4) unstable; urgency=low

  * Bump standards version, no change
  * Enable compat level 9

 -- Joachim Breitner <nomeata@debian.org>  Fri, 24 May 2013 12:52:44 +0200

helium (1.7~pre20090428-3.1) unstable; urgency=low

  * Non-maintainer upload.
  * Add libncurses-dev build dependency (Closes: #676022).

 -- Luk Claes <luk@debian.org>  Thu, 05 Jul 2012 20:23:52 +0000

helium (1.7~pre20090428-3) unstable; urgency=low

  * Fix building with GHC 7.4.1 (Closes: #665079)

 -- Joachim Breitner <nomeata@debian.org>  Sat, 24 Mar 2012 22:06:08 +0100

helium (1.7~pre20090428-2) unstable; urgency=low

  * Depend on network

 -- Joachim Breitner <nomeata@debian.org>  Sat, 04 Jun 2011 00:25:16 +0200

helium (1.7~pre20090428-1) unstable; urgency=low

  [ Marco Silva ]
  * Use ghc instead of ghc6

  [ Joachim Breitner ]
  * New upstream release
  * Update upstream homepage URL
  * This builds (Closes: #598174)

 -- Joachim Breitner <nomeata@debian.org>  Thu, 02 Jun 2011 19:20:46 +0200

helium (1.6-6) unstable; urgency=low

  * Refresh patches to make them work with Lenny's dpkg.

 -- Marco Túlio Gontijo e Silva <marcot@debian.org>  Mon, 15 Mar 2010 10:30:50 -0300

helium (1.6-5) unstable; urgency=low

  * Use 3.0 (quilt) source format.
  * debian/control: Addopt for the Debian Haskell Group.
  * Bump Standards-Version to 3.8.4, setting Section: to haskell.
  * Fix "[helium] 'man lvmrun' typo: 'one' instead of 'on' " correcting
    typo in debian/lvmrun.1.  Thanks to Weakish Jiang
    <weakish@gmail.com>. (Closes: #499157)
  * Use compat 7, changing dh_clean -k to dh_prep.