@@ -43,7 +43,9 @@ configure-stamp:
 	touch configure-stamp
 
 
-build: build-stamp
+build: build-arch
+build-indep:
+build-arch: build-stamp
 build-stamp: configure-stamp
 	dh_testdir
 	$(MAKE_ENVVARS) $(MAKE) -C lvm/src/runtime depend
@@ -102,4 +104,5 @@ binary-arch: build install
 	dh_builddeb
 
 binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install configure
+.PHONY: build-indep build-arch build clean
+.PHONY: binary-indep binary-arch binary install configure
