@@ -5,6 +5,7 @@ helium (1.7~pre20090428-5) UNRELEASED; urgency=low
   * Merge from Ubuntu (Michael Bienia):
     - debian/patches/20_fix-as-needed-linking: Fix linking with --as-needed.
   * Update watch file.
+  * Add build-indep and build-arch targets to debian/rules.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 29 May 2013 00:12:26 +0100
 
